@@ -27,9 +27,10 @@
  * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
  * SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
-package org.hisp.dhis.notification;
+package org.hisp.dhis.tracker.program.notification;
 
 import com.google.common.collect.ImmutableMap;
+import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Maps;
 import java.util.Date;
 import java.util.HashMap;
@@ -41,22 +42,28 @@ import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.hisp.dhis.dataelement.DataElement;
 import org.hisp.dhis.eventdatavalue.EventDataValue;
+import org.hisp.dhis.notification.BaseNotificationMessageRenderer;
+import org.hisp.dhis.notification.TemplateVariable;
 import org.hisp.dhis.option.Option;
 import org.hisp.dhis.option.OptionService;
-import org.hisp.dhis.program.SingleEvent;
 import org.hisp.dhis.program.notification.ProgramStageTemplateVariable;
+import org.hisp.dhis.tracker.model.TrackedEntityAttributeValue;
+import org.hisp.dhis.tracker.model.TrackerEvent;
 import org.springframework.stereotype.Component;
 
+/**
+ * @author Halvdan Hoem Grelland
+ */
 @Component
 @RequiredArgsConstructor
-public class SingleEventNotificationMessageRenderer
-    extends BaseNotificationMessageRenderer<SingleEvent> {
+public class ProgramStageNotificationMessageRenderer
+    extends BaseNotificationMessageRenderer<TrackerEvent> {
 
   private final OptionService optionService;
 
-  public static final ImmutableMap<TemplateVariable, Function<SingleEvent, String>>
+  public static final ImmutableMap<TemplateVariable, Function<TrackerEvent, String>>
       VARIABLE_RESOLVERS =
-          new ImmutableMap.Builder<TemplateVariable, Function<SingleEvent, String>>()
+          new ImmutableMap.Builder<TemplateVariable, Function<TrackerEvent, String>>()
               .put(
                   ProgramStageTemplateVariable.PROGRAM_NAME,
                   event -> event.getProgramStage().getProgram().getDisplayName())
@@ -73,22 +80,46 @@ public class SingleEventNotificationMessageRenderer
                   ProgramStageTemplateVariable.ORG_UNIT_CODE,
                   event -> event.getOrganisationUnit().getCode())
               .put(
+                  ProgramStageTemplateVariable.DUE_DATE,
+                  event -> formatDate(event.getScheduledDate()))
+              .put(
                   ProgramStageTemplateVariable.EVENT_DATE,
                   event -> formatDate(event.getOccurredDate()))
+              .put(
+                  ProgramStageTemplateVariable.DAYS_SINCE_DUE_DATE,
+                  event -> daysSince(event.getScheduledDate()))
+              .put(
+                  ProgramStageTemplateVariable.DAYS_UNTIL_DUE_DATE,
+                  event -> daysUntil(event.getScheduledDate()))
               .put(ProgramStageTemplateVariable.CURRENT_DATE, event -> formatDate(new Date()))
               .put(
                   ProgramStageTemplateVariable.EVENT_ORG_UNIT_ID,
                   event -> event.getOrganisationUnit().getUid())
+              .put(
+                  ProgramStageTemplateVariable.ENROLLMENT_ORG_UNIT_ID,
+                  event -> event.getEnrollment().getOrganisationUnit().getUid())
+              .put(
+                  ProgramStageTemplateVariable.ENROLLMENT_ORG_UNIT_NAME,
+                  event -> event.getEnrollment().getOrganisationUnit().getName())
+              .put(
+                  ProgramStageTemplateVariable.ENROLLMENT_ORG_UNIT_CODE,
+                  event -> event.getEnrollment().getOrganisationUnit().getCode())
               .put(
                   ProgramStageTemplateVariable.PROGRAM_ID,
                   event -> event.getProgramStage().getProgram().getUid())
               .put(
                   ProgramStageTemplateVariable.PROGRAM_STAGE_ID,
                   event -> event.getProgramStage().getUid())
+              .put(
+                  ProgramStageTemplateVariable.ENROLLMENT_ID,
+                  event -> event.getEnrollment().getUid())
+              .put(
+                  ProgramStageTemplateVariable.TRACKED_ENTITY_ID,
+                  event -> event.getEnrollment().getTrackedEntity().getUid())
               .build();
 
   private static final Set<ExpressionType> SUPPORTED_EXPRESSION_TYPES =
-      Set.of(
+      ImmutableSet.of(
           ExpressionType.TRACKED_ENTITY_ATTRIBUTE,
           ExpressionType.VARIABLE,
           ExpressionType.DATA_ELEMENT);
@@ -98,19 +129,25 @@ public class SingleEventNotificationMessageRenderer
   // -------------------------------------------------------------------------
 
   @Override
-  protected ImmutableMap<TemplateVariable, Function<SingleEvent, String>> getVariableResolvers() {
+  protected ImmutableMap<TemplateVariable, Function<TrackerEvent, String>> getVariableResolvers() {
     return VARIABLE_RESOLVERS;
   }
 
   @Override
   protected Map<String, String> resolveTrackedEntityAttributeValues(
-      Set<String> attributeKeys, SingleEvent entity) {
-    return Maps.newHashMap();
+      Set<String> attributeKeys, TrackerEvent entity) {
+    if (attributeKeys.isEmpty()) {
+      return Maps.newHashMap();
+    }
+
+    return entity.getEnrollment().getTrackedEntity().getTrackedEntityAttributeValues().stream()
+        .filter(av -> attributeKeys.contains(av.getAttribute().getUid()))
+        .collect(Collectors.toMap(av -> av.getAttribute().getUid(), this::filterValue));
   }
 
   @Override
   protected Map<String, String> resolveDataElementValues(
-      Set<String> elementKeys, SingleEvent entity) {
+      Set<String> elementKeys, TrackerEvent entity) {
     if (elementKeys.isEmpty()) {
       return Maps.newHashMap();
     }
@@ -140,6 +177,24 @@ public class SingleEventNotificationMessageRenderer
   // Internal methods
   // -------------------------------------------------------------------------
 
+  private String filterValue(TrackedEntityAttributeValue av) {
+    String value = av.getPlainValue();
+
+    if (value == null) {
+      return CONFIDENTIAL_VALUE_REPLACEMENT;
+    }
+
+    // If the AV has an OptionSet -> substitute value with the name of the
+    // Option
+    if (av.getAttribute().hasOptionSet()) {
+      Optional<Option> option =
+          optionService.findOptionByCode(av.getAttribute().getOptionSet().getUid(), value);
+      if (option.isPresent()) value = option.get().getName();
+    }
+
+    return value != null ? value : MISSING_VALUE_REPLACEMENT;
+  }
+
   private String filterValue(EventDataValue dv, DataElement dataElement) {
     String value = dv.getValue();
 
@@ -152,9 +207,7 @@ public class SingleEventNotificationMessageRenderer
     if (dataElement != null && dataElement.hasOptionSet()) {
       Optional<Option> option =
           optionService.findOptionByCode(dataElement.getOptionSet().getUid(), value);
-      if (option.isPresent()) {
-        value = option.get().getName();
-      }
+      if (option.isPresent()) value = option.get().getName();
     }
 
     return value != null ? value : MISSING_VALUE_REPLACEMENT;
